--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         async function fetchData() {
             try {
                 const url = 'https://www.google.co.in/alerts/feeds/07478280281954405451/4423468906746476792'; // Replace with your actual URL
-                const response = await fetch(url);
+                //const response = await fetch(url);
+                const response = await fetch(url, {   mode: 'no-cors' });
                 const data = await response.json(); // Assuming the response is in JSON format
                 updateTable(data.entries); // Adjust this based on your actual data structure
             } catch (error) {
