--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                 const url = 'https://www.google.co.in/alerts/feeds/07478280281954405451/4423468906746476792'; // Replace with your actual URL
                 //const response = await fetch(url);
                 const response = await fetch(url, {   mode: 'no-cors' });
+                console.log(response);
                 const data = await response.json(); // Assuming the response is in JSON format
+                
                 updateTable(data.entries); // Adjust this based on your actual data structure
             } catch (error) {
                 console.error('Error fetching data:', error);
